# MingwDownloader

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  virus-total.txt
.github/workflows/: ci-msvc.yml
src/: main.cpp
